# comp9242-sos

./: README.md
projects/aos/: CMakeLists.txt
projects/aos/apps/console_test/src/: console_test.c
projects/aos/apps/loopy/: CMakeLists.txt
projects/aos/apps/loopy/src/: loopy.c
projects/aos/apps/rust_fan/: CMakeLists.txt
projects/aos/apps/rust_fan/src/: rust_fan.c
projects/aos/libaos/src/: debug.c
projects/aos/libclock/: CMakeLists.txt
projects/aos/libclock/src/: clock.c  clock_test.c  timeouts.c  timeouts_test.c
projects/aos/libethernet/src/: ethernet.c
projects/aos/libnetworkconsole/src/: networkconsole.c
projects/aos/libsel4cspace/src/: cspace.c
projects/aos/libsosapi/include/: sos.h
projects/aos/libsosapi/src/: sos.c  sys_morecore.c  vsyscall.c
projects/aos/sos/: CMakeLists.txt
projects/aos/sos/src/: backtrace.h  bootstrap.c  clock_sync.h  debugger.c  elf.c  elf_file.h  elfload.h  files.c  files.h  filesystem.c  filesystem.h  frame_table.c  frame_table.h  irq.c  main.c  main_includes.h  mapping.c  mapping.h  netcon.c  netcon.h  network.c  network.h  pagefile.c  pagefile.h  process.c  process.h  serverside.c  serverside.h  std_sync.h  syscall_codes.h  tests.c  threads.c  threads.h  ut.c  ut.h  utils.c  utils.h  vmem.c  vmem.h  vmem_layout.h
projects/libelf/: CMakeLists.txt
projects/libelf/include/elf/: elf.h  elf64.h
projects/libelf/src/: elf.c
projects/libsel4sync/: CMakeLists.txt
projects/libsel4sync/include/sync/: recursive_mutex.h
projects/libsel4sync/src/: recursive_mutex.c
projects/libutils/include/utils/: util.h
(+8 files in other folders)
